# Task-app

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
lib/: exceptions.py
lib/log/: config.py  utils.py
lib/ydb/: __init__.py  exceptions.py  literals.py  mixin.py  query.py
modules/todo/: crud.py  views.py
modules/todo/schemas/: request.py  response.py
tables/: table.py  task.py
